--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,5 +5,6 @@ html
     link(rel='stylesheet', href='/stylesheets/bulma.css')
     script(src="https://cdn.auth0.com/js/lock/10.14/lock.min.js")
     script(src="https://cdn.auth0.com/js/auth0/8.6/auth0.min.js")
+    script(src="/socket.io/socket.io.js")
   body
     block content
